compiler/testData/asJava/lightClasses/compilationErrors/EnumNameOverride.java
public enum EnumNameOverride /* EnumNameOverride*/ implements Bar {
  ;

  private  EnumNameOverride();//  .ctor()

}